--- a/src/App.css
+++ b/src/App.css
@@ -79,7 +79,16 @@
   justify-content:center;
   align-items: center;
   height: 100%;
-  top:200px;
+}
+.top1-100px{
+  width: 100%;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content:center;
+  align-items: center;
+  height: 100%;
+  top:200px
 }
 .style-detail{
   border: 5px solid red;
