--- a/src/App.css
+++ b/src/App.css
@@ -111,3 +111,10 @@
 text-align: left;
  list-style-position: outside !important;
 }
+.style-jobtitle{
+display: flex;
+flex-direction: column;
+align-items: start;
+justify-content: space-around;
+  
+}
