--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,8 @@
 }
 
 .title{
-  color:red
+  color:black;
+  font-weight: bolder;
 }
 .title:hover{
   color:green
@@ -86,7 +87,7 @@
   justify-content:center;
   align-items: center;
   height: 100%;
-  top:200px
+  top:50px
 }
 .style-detail{
   border: 5px solid red;
@@ -114,4 +115,86 @@ display: flex;
 flex-direction: column;
 align-items: start;
 justify-content: space-around;
+}
+.style-jobs{
+  padding-top: 150px;
+}
+.style-img{
+  margin-right: 100px;
+  padding-top: 30px;
+  
+}
+.style-search{
+  top:400px;
+}
+.style-login{
+  top: 400px;
+}
+.btn-hotjob{
+  
+  background-color: rgb(241, 206, 6);
+ 
+  -webkit-border-radius: 10px;
+ 
+  border-radius: 10px;
+   
+  border: none;
+   
+  color: #FFFFFF;
+   
+  cursor: pointer;
+   
+  display: inline-block;
+   
+  font-family: Arial;
+   
+  font-size: 20px;
+   
+  padding: 5px 10px;
+   
+  text-align: center;
+   
+  text-decoration: none;
+}
+
+@-moz-keyframes glowing {
+  0% { background-color: #004A7F; -moz-box-shadow: 0 0 3px #004A7F; }
+  50% { background-color: #0094FF; -moz-box-shadow: 0 0 10px #0094FF; }
+  100% { background-color: #004A7F; -moz-box-shadow: 0 0 3px #004A7F; }
+}
+ 
+@-moz-keyframes glowing {
+  0% { background-color: #004A7F; -moz-box-shadow: 0 0 3px #004A7F; }
+  50% { background-color: #0094FF; -moz-box-shadow: 0 0 10px #0094FF; }
+  100% { background-color: #004A7F; -moz-box-shadow: 0 0 3px #004A7F; }
+}
+ 
+@-o-keyframes glowing {
+  0% { background-color: #004A7F; box-shadow: 0 0 3px #004A7F; }
+  50% { background-color: #0094FF; box-shadow: 0 0 10px #0094FF; }
+  100% { background-color: #004A7F; box-shadow: 0 0 3px #004A7F; }
+}
+ 
+@keyframes glowing {
+  0% { background-color: #004A7F; box-shadow: 0 0 3px #004A7F; }
+  50% { background-color: #0094FF; box-shadow: 0 0 10px #0094FF; }
+  100% { background-color: #004A7F; box-shadow: 0 0 3px #004A7F; }
+}
+ 
+.btn-hotjob {
+  -webkit-animation: glowing 1500ms infinite;
+  -moz-animation: glowing 1500ms infinite;
+  -o-animation: glowing 1500ms infinite;
+  animation: glowing 1500ms infinite;
+}
+.style-search{
+  display: flex;
+  top:150px;
+  position: absolute;
+  left:10px;
+  justify-content: center;
+  align-items: center;
+  width:100%;
+
+
 }
